# calificaciones-up

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  deny.toml  nixpacks.toml  package-lock.json  package.json
.github/workflows/: ci.yml  codex-autofix.yml  codex-manual.yml  codex-review.yml  docker.yml  security.yml
apps/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  railway.toml
apps/api/src/: main.rs
apps/api/src/api/: handlers.rs  router.rs  state.rs
apps/api/src/application/: academic_progress_parser.rs  academic_record_consolidator.rs  health_service.rs  login_use_case.rs  mod.rs  morosidad_parser.rs  notes_credits_parser.rs  professors_parser.rs  remote_login_client.rs  session_repository.rs  student_avance_use_case.rs  student_photo_use_case.rs
apps/api/src/domain/: academic_progress.rs  credentials.rs  error.rs  health.rs  mod.rs  session.rs
apps/api/src/infrastructure/: PARSER_ASSUMPTIONS.md  avance_parser.rs  config.rs  matricula_client.rs  mod.rs  morosidad_parser.rs  notas_parser.rs  observability.rs  profesores_parser.rs  session_repository_in_memory.rs
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  railway.toml
apps/web/src/app/: layout.tsx  page.tsx  sitemap.ts
apps/web/src/app/(authenticated)/: layout.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/layout/: AuthenticatedShell.tsx  AuthenticatedShellClient.tsx
apps/web/src/lib/: env.ts  site.ts
apps/web/src/styles/: globals.css
docs/deployment/: railway.md
(+57 files in other folders)
