[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
[dependencies]
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
